# Flex-Suite

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  docker-compose.yml  package.json  setup_node.sh  wrangler.toml
backend/: Cargo.toml  build.rs
backend/src/: engine.rs  engine_ffi.rs  lib.rs  main.rs
calc_engine/: CMakeLists.txt
calc_engine/include/: engine.h
calc_engine/src/: engine.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/apps/: DocumentEditor.css  DocumentEditor.tsx  EditorToolbar.css  EditorToolbar.tsx  Home.css  Home.tsx
frontend/src/apps/components/: MathSidebar.tsx  TablePicker.tsx
frontend/src/apps/extensions/: FontSize.ts  LineHeight.ts  MathComponent.tsx  MathExtension.ts  PageBreak.ts
frontend/src/apps/utils/: markdownSerializer.ts
frontend/src/components/: Layout.css  Layout.tsx
frontend/src/utils/: storage.ts
worker/: index.js  wrangler.toml
